# BattleArena

./: Ammunition.h  Background.cpp  Background.h  CMakeLists.txt  Entity.cpp  Entity.h  GameManager.cpp  GameManager.h  LivingEntity.h  Player.cpp  Player.h  README.md  SpriteManager.h  Wave.cpp  Wave.h  Weapon.h  WeaponValues.h  main.cpp
Ammo/: AmmoFactory.cpp  AmmoFactory.h  Ammunition.cpp  Ammunition.h  ExplosiveAmmo.cpp  ExplosiveAmmo.h  PenetrativeAmmo.cpp  PenetrativeAmmo.h  RegularAmmo.cpp  RegularAmmo.h
Entity/: BasicEnemy.h  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
Entity/LivingEntity/: LivingEntity.cpp  LivingEntity.h  Player.cpp  Player.h
Entity/LivingEntity/Enemy/: ArmoredEnemy.cpp  ArmoredEnemy.h  BasicEnemy.cpp  BasicEnemy.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  FastEnemy.cpp  FastEnemy.h  RegularEnemy.cpp  RegularEnemy.h
Entity/LivingEntity/Enemy/States/: IdleState.cpp  IdleState.h  MovingState.cpp  MovingState.h  State.cpp  State.h
Wave/: Spawner.cpp  Spawner.h  Wave.cpp  Wave.h
Weapon/: Weapon.cpp  Weapon.h  WeaponFactory.cpp  WeaponFactory.h  WeaponValues.h
